docs: add license composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
       "Sintese\\JsonFlatten\\": "src/"
     }
   },
+  "license": "MIT",
   "require": {
     "justinrainbow/json-schema": "^5.2",
     "ext-json": "*"
